# tAutoFisher

./: README.md  build.sh  debug.sh  flake.nix  pyproject.toml
pynput/: setup.py
pynput/lib/pynput.egg-info/: PKG-INFO  requires.txt
tAutoFisher/: __main__.py  app.py  states.py
